# naive-pastebin

./: .editorconfig  .env  .env.default  .gitignore  Cargo.toml  Makefile.toml  README.md  踩坑与解决.md
src/: main.rs  server.rs  time.rs
src/controller/: mod.rs  raw.rs  rest.rs  web.rs
src/core/: disk.rs  mod.rs  store.rs  store_item.rs
src/domain/: key.rs  mod.rs  record.rs
src/dto/: mod.rs
src/service/: embed.rs  find.rs  mod.rs  save.rs  task.rs
src/store/: mod.rs
src/utils/: env.rs  error.rs  mod.rs  time.rs
static/: index.html
static/css/: custom.css  embed.css  prism.css
static/js/: highlight.pack.js  prism.js
templates/: embed.html.tera  index.html.tera  show.html.tera
