[package]
name = "naive-pastebin"
version = "0.1.0"
authors = ["fun4wut <nihouze@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = "0.5.2"
lazy_static = "1.3.0"
log = "0.4.7"
env_logger = "0.6.2"
dotenv = "0.14.1"
short-crypt = "1.0.11"
serde = { version = "1.0.40", features = ["derive"] }
serde_json = "1.0.40"
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"] # 打开JSON自动序列化/反序列化支持
